<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <LinearLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editLoginUsername"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/textview_shape"
            android:drawableLeft="@drawable/icon_group_name"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:paddingRight="5dp"
            android:textColor="@color/app_white"
            android:textColorHint="@color/app_white" />

        <EditText
            android:id="@+id/editLoginPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_shape"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="5dp"
            android:textColor="@color/app_white"
            android:textColorHint="@color/app_white" />
        
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_shape"
            android:drawableLeft="@drawable/icon_facebook"
            android:drawablePadding="5dp"
            android:gravity="center_vertical|left"
            android:paddingLeft="20dp"
            android:text="@string/sign_in_with_facebook"
            android:textColor="@color/app_white" />

    </LinearLayout>

</RelativeLayout>